ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__config_general_tab.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 21)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── 配 置  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   通 用     提 供 商     语 言 服 务 器     Issues                                │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 配 置                                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  2 more above                                                           │             
            │> 自 动 更 新                                                           最 新  │             
            │> 以 差 异 显 示  Git 更 改                                                 off │             
            │> 语 言                                                               中 文  │             
            │> 状 态 栏 风 格                                                         简 洁  │             
            │> 按 键 提 示 风 格                                                       对 比  │             
            │> 屏 幕 模 式                                                     fullscreen │             
  ╭─────────│  Enter change · r reset · ←/→ details · Tab tabs · / search · Esc close │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
