ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__config_issues_tab_shows_one_auto_refresh_value.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── Config ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   General    Providers    Issues                                        │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search configuration                                               │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Auto refresh                                                     Never │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│                                                                         │──────────╮  
  │ > Build │  Enter/Space change · ←/→ details · Tab tabs · / search · Esc close     │          │  
  ╰─────────└─────────────────────────────────────────────────────────────────────────┘ic model ─╯
