ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__on_demand_instruction_at_completion.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  + manual · /ash-home/instructions/manual.md  instruction                      
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > Review @man                                                            │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
