ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__short_provider_modal_api_key.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: next
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── Config › Custom provider ─────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Base URL                                                               │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ https://example.com/v1                                             │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> API key                                                                │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ API key (optional)                                                 │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
  ╭─────────│                                                                         │──────────╮  
  │ > Build │  Enter to edit  ·  Tab/Shift+Tab to move  ·  Esc to return              │          │  
  ╰─────────└─────────────────────────────────────────────────────────────────────────┘ic model ─╯
