ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__slash_popup_scrolled_to_last_command.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ───────────────────────────────────────────────────────────────────── 28/28   
  /new                       start a new chat                                  │
  /quit                      quit Ash                                          │
  /dashboard                 open Dashboard                                    │
  /subagents                 focus the current Session Thread list             │
  /issue                     select issues to develop together                 │
  /pr                        ask the Agent to create or inspect a pull request ┃
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > /                                                                      │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
